--- a/style_mobile.css
+++ b/style_mobile.css
@@ -6,12 +6,13 @@
 
 html{
     font-size: 62.5%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Prompt', sans-serif;
 }
+
 
 header{
     position: relative;
-    width: 100%;
+    width: 100vw;
     height: 175px;
     box-shadow: 0 0 10px 1px #a5a5a5;
 
@@ -33,11 +34,12 @@ header{
     display: flex;
     justify-content: center;
     list-style: none;
+    
 }
 
 .nav-rigth-section li{
-    width: 82px;
-    height: 60px;
+    width: 70px;
+    height: 50px;
     border-radius: 5px;
     font-size: 1.5rem;
     margin: 0 5px;
@@ -46,55 +48,106 @@ header{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 8px;
+    margin-top: 10px;
+
   
 }
 
 i{
-    font-size: 3rem;
+    font-size: 2rem;
     color: #0061e0;
 }
 
 .nav-container .nav-rigth-section a{
     text-decoration: none;
     color: #0061e0;
+    font-weight: 300;
 }
 
 
 main .main-text h1{
-    width: 85%;
+    width: 100%;
     height: 50px;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+    font-weight: 500;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     color: #ffffff;
     margin-top: 5px;
     background: rgba(0, 98, 226, 0.6);
+    margin-bottom: 8px;
     
 }
 
 
 main .main-text .subtitle p{
-    width: 75%;
+    width: 100%;
     height: 50px;
-    font-size: 1.3rem;
-    font-weight: bold;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    font-weight: 300;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     padding: 20px ;
-    color: #ffffff;
-    margin-top: 10px;
+    color: #494949;
     margin-bottom: 20px;
-    background: rgba(114, 114, 114, .6);
+
     
 }
+
+.sections_img_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.sections_img_x2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.sections_img_x2 img{
+    width: 280px;
+}
+
+.sections_img_x2 a{
+    margin: 15px;
+    text-decoration: none;
+    font-size: 1.5rem;
+    text-align: center;
+    color: #0061e0;
+}
+
+.sections_img_x2 a:hover{
+    color:#494949;
+    transition: 500ms;
+}
+
+.sections_img_x2 h3{
+    font-weight: 400;
+}
+
+
+
+
 
 main .boxes{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+.boxes_group_x2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
 
 main .box1, main .box2{
@@ -109,18 +162,16 @@ main .box1, main .box2{
 
 .boxes a{
     text-decoration: none;
-    color: #ffffff;
+    color: #adadad;
 }
 
 
 main .box1{
-    background-color: rgba(114, 114, 114, .8) ;
+    background-color: rgba(34, 34, 34, 0.863) ;
 
 }
 
-main .box2{
-    background-color: rgba(0, 98, 226, 0.8)
-}
+
 
 
 main .boxes h2{
@@ -137,8 +188,56 @@ main .boxes p{
     color: white;
 }
 
+footer{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: #0061e0;
+    padding-top: 10px;
+    bottom: 0;
+}
 
-@media (min-width: 668px){
+footer .left_footer, footer .rigth_footer{
+    margin: 15px 0;
+}
+
+footer .left_footer ul{
+    list-style: none;
+    font-size: 1.4rem;
+    font-weight: 300;
+}
+
+footer .left_footer li{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    color: #9db4ff;
+    font-weight: 400;
+
+}
+
+footer .left_footer li i{
+    margin-right: 10px;
+    color: #9db4ff;
+}
+
+footer .rigth_footer h3{
+    font-size: 1.8rem;
+    font-weight: 300;
+    color: #ffffff;
+}
+
+
+footer .rigth_footer i{
+    display: flex;
+    justify-content: center;
+    color: #ffffff;
+    font-size: 5rem;
+}
+
+
+@media (min-width: 620px){
 .nav-container{
     justify-content: space-evenly;
 }
@@ -153,11 +252,11 @@ header{
 
 main .main-text h1{
     font-size: 2rem;
-    width: 50%;
+    width: 70%;
     margin-top: 15px;
 }
 main .main-text .subtitle p{
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
 
 
