--- a/style_mobile.css
+++ b/style_mobile.css
@@ -15,6 +15,8 @@ header{
     width: 100%;
     height: 175px;
     box-shadow: 0 0 10px 1px #a5a5a5;
+    position: fixed;
+    background-color: #ffffff;
 
 }
 
@@ -63,6 +65,10 @@ i{
     text-decoration: none;
     color: #0061e0;
     font-weight: 300;
+}
+
+main{
+    padding-top: 150px;
 }
 
 
@@ -293,6 +299,10 @@ footer .rigth_footer img{
 
 header{
     height: 120px;
+}
+
+main{
+    padding-top: 100px;
 }
 
 main .main-text h1{
