--- a/style_mobile.css
+++ b/style_mobile.css
@@ -15,7 +15,6 @@ header{
     width: 100%;
     height: 175px;
     box-shadow: 0 0 10px 1px #a5a5a5;
-    position: fixed;
     background-color: #ffffff;
 
 }
@@ -28,7 +27,7 @@ header{
 
 
 .nav-container .logo-header img{
-    width: 300px;
+    width: 345px;
     margin-top: 15px;
 }
 
@@ -36,7 +35,6 @@ header{
     display: flex;
     justify-content: center;
     list-style: none;
-    
 }
 
 .nav-rigth-section li{
@@ -65,10 +63,11 @@ i{
     text-decoration: none;
     color: #0061e0;
     font-weight: 300;
+    text-align: center;
 }
 
 main{
-    padding-top: 150px;
+    /* padding-top: 150px; */
 }
 
 
@@ -299,6 +298,7 @@ footer .rigth_footer img{
 
 header{
     height: 120px;
+    position: fixed;
 }
 
 main{
