--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,344 +1,379 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-html{
-    font-size: 62.5%;
-    font-family: 'Prompt', sans-serif;
-    position: relative;
+html {
+  font-size: 62.5%;
+  font-family: 'Prompt', sans-serif;
+  position: relative;
 }
 
-body{
-    
+header {
+  position: relative;
+  width: 100%;
+  height: 175px;
+  -webkit-box-shadow: 0 0 10px 1px #6b6c6e;
+          box-shadow: 0 0 10px 1px #6b6c6e;
+  background-color: white;
 }
 
-
-header{
-    position: relative;
-    width: 100%;
-    height: 175px;
-    box-shadow: 0 0 10px 1px #a5a5a5;
-    background-color: #ffffff;
-
+header .nav-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.nav-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+header .nav-container .logo-header img {
+  width: 345px;
+  margin-top: 25px;
 }
 
-
-.nav-container .logo-header img{
-    width: 345px;
-    margin-top: 25px;
+header .nav-container .nav-rigth-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
 }
 
-.nav-container .nav-rigth-section{
-    display: flex;
-    justify-content: center;
-    list-style: none;
+header .nav-container .nav-rigth-section li {
+  width: 70px;
+  height: 50px;
+  border-radius: 5px;
+  font-size: 1.5rem;
+  margin: 0 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 8px;
 }
 
-.nav-rigth-section li{
-    width: 70px;
-    height: 50px;
-    border-radius: 5px;
-    font-size: 1.5rem;
-    margin: 0 5px;
-    /* box-shadow: 0 0 10px 1px #a5a5a5; */
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-   
-
-  
+header .nav-container .nav-rigth-section a {
+  text-decoration: none;
+  color: #0042ad;
+  font-weight: 300;
+  text-align: center;
 }
 
-i{
-    font-size: 2rem;
-    color: #0061e0;
+i {
+  font-size: 2rem;
+  color: #0042ad;
 }
 
-.nav-container .nav-rigth-section a{
-    text-decoration: none;
-    color: #0061e0;
-    font-weight: 300;
-    text-align: center;
+main {
+  min-height: 80vh;
 }
 
-main{
-    min-height: 80vh;
+main .main-text h1 {
+  width: 100%;
+  height: 50px;
+  font-size: 1.8rem;
+  font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  color: white;
+  margin-top: 5px;
+  background: rgba(0, 98, 226, 0.6);
+  margin-bottom: 8px;
 }
 
-
-
-main .main-text h1{
-    width: 100%;
-    height: 50px;
-    font-size: 1.8rem;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: #ffffff;
-    margin-top: 5px;
-    background: rgba(0, 98, 226, 0.6);
-    margin-bottom: 8px;
-    
+main .main-text .subtitle p {
+  width: 100%;
+  height: 50px;
+  font-size: 1.6rem;
+  line-height: 2rem;
+  font-weight: 300;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  padding: 20px;
+  color: #6b6c6e;
+  margin-bottom: 20px;
 }
 
-
-main .main-text .subtitle p{
-    width: 100%;
-    height: 50px;
-    font-size: 1.6rem;
-    line-height: 2rem;
-    font-weight: 300;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 20px ;
-    color: #494949;
-    margin-bottom: 20px;
-
-    
+main .sections_img_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.sections_img_container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+main .sections_img_container .sections_img_x2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.sections_img_x2{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+main .sections_img_container .sections_img_x2 a:hover {
+  color: #6b6c6e;
+  -webkit-transition: 500ms;
+  transition: 500ms;
 }
 
-.sections_img_x2 img{
-    width: 280px;
+main .sections_img_container .sections_img_x2 h3 {
+  font-weight: 400;
 }
 
-.sections_img_x2 a ,.sections_img_x2 .info_doc{
-    margin: 15px;
-    text-decoration: none;
-    font-size: 1.5rem;
-    text-align: center;
-    color: #0061e0;
+main .sections_img_container .sections_img_x2 img {
+  width: 280px;
 }
 
-.sections_img_x2 .info_doc h3{
-    text-align: left;
+main .sections_img_container .sections_img_x2 a {
+  margin: 15px;
+  text-decoration: none;
+  font-size: 1.5rem;
+  text-align: center;
+  color: #0042ad;
 }
 
-.sections_img_x2 .info_doc li{
-    text-align: left;
-    margin-left: 20px;
+main .sections_img_container .sections_img_x2 .info_doc {
+  margin: 15px;
+  text-decoration: none;
+  font-size: 1.5rem;
+  text-align: center;
+  color: #0042ad;
 }
 
-.sections_img_x2 .info_doc p{
-    font-size: 1.8rem;
+main .sections_img_container .sections_img_x2 .info_doc h2 {
+  color: #6b6c6e;
 }
 
-
-
-
-.sections_img_x2 a:hover{
-    color:#494949;
-    transition: 500ms;
+main .sections_img_container .sections_img_x2 .info_doc h3 {
+  text-align: left;
 }
 
-.sections_img_x2 h3{
-    font-weight: 400;
+main .sections_img_container .sections_img_x2 .info_doc p {
+  font-size: 1.8rem;
 }
 
-
-
-
-
-main .boxes{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+main .sections_img_container .sections_img_x2 .info_doc li {
+  text-align: left;
+  margin-left: 20px;
 }
 
-.boxes_group_x2{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
+main .boxes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-main .box1, main .box2{
-    margin: 10px;
-    width: 250px;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    padding: 20px;
-    
+main .boxes h2 {
+  margin: 10px;
+  font-size: 2rem;
 }
 
-.boxes a{
-    text-decoration: none;
-    color: #adadad;
+main .boxes p {
+  font-size: 1.4rem;
 }
 
-
-main .box1{
-    background-color: rgba(34, 34, 34, 0.863) ;
-
+main .boxes a {
+  text-decoration: none;
+  color: #6b6c6e;
 }
 
-
-
-
-main .boxes h2{
-    margin: 10px;
-    font-size: 2rem;
+main .boxes i {
+  font-size: 5rem;
+  color: white;
 }
 
-main .boxes p{
-    font-size: 1.4rem;
+main .boxes_group_x2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.boxes i{
-    font-size: 5rem;
-    color: white;
+main .box1 {
+  margin: 10px;
+  width: 250px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  padding: 20px;
+  background-color: rgba(34, 34, 34, 0.863);
 }
 
-main .estetica_logo{
-    margin-top: 15px;
-    width: 100%;
-    text-align: center;
-
+main .box2 {
+  margin: 10px;
+  width: 250px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  padding: 20px;
 }
 
-main .estetica_logo img{
-    padding: 10px;
-    width: 100%;
-    max-width: 500px;
+main .estetica_logo {
+  margin-top: 15px;
+  width: 100%;
+  text-align: center;
 }
 
-
-
-.map{
-    text-align: center;  
-    margin: 15px;
+main .estetica_logo img {
+  padding: 10px;
+  width: 100%;
+  max-width: 500px;
 }
 
-.map iframe{
-    margin-top: 10px;
-    width: 320px;
-    height: 320px;
+main .map {
+  text-align: center;
+  margin: 15px;
 }
 
-.map h2{
-    font-size: 2rem;
-    color: #0061e0;
-    font-weight: 600;
+.map iframe {
+  margin-top: 10px;
+  width: 320px;
+  height: 320px;
 }
 
-
-
-footer{
-    
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: #0061e0;
-    padding-top: 10px;
+.map h2 {
+  font-size: 2rem;
+  color: #0042ad;
+  font-weight: 600;
 }
 
-footer .left_footer, footer .rigth_footer{
-    margin: 15px 0;
+footer {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: #0042ad;
+  padding-top: 10px;
 }
 
-footer .left_footer ul{
-    list-style: none;
-    font-size: 1.4rem;
-    font-weight: 300;
+footer .rigth_footer {
+  margin: 15px 0;
+  color: white;
+  text-align: center;
 }
 
-footer .left_footer li{
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    color: #9db4ff;
-    font-weight: 400;
-
+footer .rigth_footer h3 {
+  font-size: 1.8rem;
+  font-weight: 300;
 }
 
-footer .left_footer li i{
-    margin-right: 10px;
-    color: #9db4ff;
+footer .rigth_footer p {
+  font-size: 1.2rem;
+  font-weight: 300;
 }
 
-footer .rigth_footer{
-    color: #ffffff;
-    text-align: center;
+footer .rigth_footer img {
+  width: 80px;
 }
 
-footer .rigth_footer p{
-    font-size: 1.2rem;
-    font-weight: 300;
+footer .left_footer {
+  margin: 15px 0;
 }
 
-footer .rigth_footer h3{
-    font-size: 1.8rem;
-    font-weight: 300;
+footer .left_footer ul {
+  list-style: none;
+  font-size: 1.4rem;
+  font-weight: 300;
 }
 
-
-footer .rigth_footer img{
-    width: 80px;
+footer .left_footer li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+  color: #9db4ff;
+  font-weight: 400;
 }
 
-
-
-
-@media (min-width: 682px){
-.nav-container{
-    justify-content: space-evenly;
+footer .left_footer li i {
+  margin-right: 10px;
+  color: #9db4ff;
 }
-    
-.nav-container .nav-rigth-section{
+
+@media (min-width: 682px) {
+  main {
+    padding-top: 100px;
+  }
+  .nav-container {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .nav-container .nav-rigth-section {
     margin-top: 35px;
-}
-
-header{
+  }
+  header {
     height: 120px;
     position: fixed;
-}
-
-main{
-    padding-top: 100px;
-}
-
-main .main-text h1{
+  }
+  main .main-text h1 {
     font-size: 2rem;
     width: 70%;
     margin-top: 15px;
-}
-main .main-text .subtitle p{
+  }
+  main .main-text .subtitle p {
     font-size: 2rem;
-}
-
-.map iframe{
+  }
+  .map iframe {
     margin-top: 10px;
     width: 600px;
     height: 450px;
+  }
 }
-
-
-}
+/*# sourceMappingURL=style_mobile.css.map */
