--- a/style_mobile.scss
+++ b/style_mobile.scss
@@ -75,8 +75,13 @@ i{
 
 main{
     min-height: 80vh;
+    h3{
+        font-weight: 400;
+        font-size: 1.7rem;
+    }     
 
     .main-text {
+
         h1{
         width: 100%;
         height: 50px;
@@ -89,24 +94,18 @@ main{
         color: white;
         margin-top: 5px;
         background: rgba(0, 98, 226, 0.6);
-        margin-bottom: 8px; 
         }
 
         .subtitle p{
             width: 100%;
-            height: 50px;
-            font-size: 1.6rem;
+            font-size: 1.8rem;
             line-height: 2rem;
             font-weight: 300;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             text-align: center;
             padding: 20px ;
             color: $gray;
-            margin-bottom: 20px;
-        
-            
+            margin: 0 auto;
+
         }
     }
     .sections_img_container{
@@ -123,10 +122,7 @@ main{
                 color:$gray;
                 transition: 500ms;
             }
-
-            h3{
-                font-weight: 400;
-            }            
+       
 
             img{
                 width: 280px;
@@ -135,7 +131,7 @@ main{
             a{
                 margin: 15px;
                 text-decoration: none;
-                font-size: 1.5rem;
+                
                 text-align: center;
                 color: $blue;
             }
@@ -235,6 +231,19 @@ main{
         text-align: center;  
         margin: 15px;
     }
+    .implantes-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+        .implante-item{
+            picture img{
+                width: 90%;
+                height: auto;
+            }
+        
+        }
+    }
 
 }
 
@@ -315,6 +324,31 @@ footer{
 
 main{
     padding-top: 100px;
+
+    .main-text {
+
+        .subtitle p{
+            width: 80%;
+        
+            
+        }
+    }
+    .implantes-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+        .implante-item{
+            width: 45%;
+            color: $blue;
+            picture img{
+                width: 60%;
+                height: auto;
+            }
+        
+        }
+    }
+    
 }
 
 
