--- a/style_mobile.css
+++ b/style_mobile.css
@@ -148,6 +148,9 @@ main .sections_img_container .sections_img_x2 a:hover {
 
 main .sections_img_container .sections_img_x2 img {
   width: 280px;
+  -webkit-box-shadow: 0px 0px 16px lightgray;
+          box-shadow: 0px 0px 16px lightgray;
+  border-radius: 10px;
 }
 
 main .sections_img_container .sections_img_x2 a {
@@ -155,6 +158,9 @@ main .sections_img_container .sections_img_x2 a {
   text-decoration: none;
   text-align: center;
   color: #0042ad;
+  border-radius: 20px;
+  width: 340px;
+  padding: 10px;
 }
 
 main .sections_img_container .sections_img_x2 .info_doc {
@@ -271,9 +277,22 @@ main .implantes-container {
   text-align: center;
 }
 
+main .implantes-container .implante-item {
+  background-color: #f7f7f7;
+  border-radius: 20px;
+  width: 94%;
+  margin: 10px;
+  padding: 10px;
+  color: #0042ad;
+}
+
 main .implantes-container .implante-item picture img {
   width: 90%;
   height: auto;
+  -webkit-box-shadow: 0px 0px 10px lightgray;
+          box-shadow: 0px 0px 10px lightgray;
+  margin-bottom: 4px;
+  border-radius: 10px;
 }
 
 .map iframe {
