--- a/style_mobile.css
+++ b/style_mobile.css
@@ -26,9 +26,9 @@ header .nav-container {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 header .nav-container .logo-header img {
@@ -64,6 +64,12 @@ header .nav-container .nav-rigth-section li {
       -ms-flex-align: center;
           align-items: center;
   padding: 8px;
+}
+
+header .nav-container .nav-rigth-section li details ul li {
+  width: 130px;
+  background-color: #6b6c6e;
+  font-size: 1.7rem;
 }
 
 header .nav-container .nav-rigth-section a {
@@ -138,12 +144,9 @@ main .sections_img_container .sections_img_x2 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-main .sections_img_container .sections_img_x2 a:hover {
-  color: #6b6c6e;
-  -webkit-transition: 500ms;
-  transition: 500ms;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 main .sections_img_container .sections_img_x2 img {
@@ -186,6 +189,19 @@ main .sections_img_container .sections_img_x2 .info_doc p {
 main .sections_img_container .sections_img_x2 .info_doc li {
   text-align: left;
   margin-left: 20px;
+}
+
+main .sections_img_container .sections_img_x2 .info_doc .contact-container .conctact-item {
+  margin-top: 16px;
+}
+
+main .sections_img_container .sections_img_x2 .info_doc .contact-container ul li {
+  margin-left: 0;
+}
+
+main .sections_img_container .sections_img_x2 .info_doc .contact-container a {
+  margin: 0;
+  padding: 0;
 }
 
 main .boxes {
@@ -304,38 +320,114 @@ main .contact-container {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-bottom: 14px;
 }
 
-main .contact-container .conctac-item {
+main .contact-container #my-form {
   width: 300px;
-  margin: 20px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 30px 20px 0 20px;
 }
 
-main .contact-container .conctac-item ul {
+main .contact-container #my-form input {
+  width: 300px;
+  height: 30px;
+  margin-bottom: 8px;
+  border-radius: 10px;
+  padding: 0 10px;
+  outline: none;
+  border: 1px solid #6b6c6e;
+}
+
+main .contact-container #my-form #message-box {
+  height: 160px;
+  padding: 10px 10px;
+  resize: none;
+  margin-bottom: 8px;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid #6b6c6e;
+  font-family: 'Prompt', sans-serif;
+}
+
+main .contact-container #my-form button {
+  width: 100px;
+  height: 30px;
+  margin: 0 auto;
+  border: none;
+  background-color: #0042ad;
+  -webkit-box-shadow: 0px 0px 10px lightgray;
+          box-shadow: 0px 0px 10px lightgray;
+  font-weight: bold;
+  color: white;
+  border-radius: 6px;
+}
+
+main .contact-container .conctact-item {
+  width: 320px;
+  margin: 20px 20px;
+}
+
+main .contact-container .conctact-item ul {
   list-style: none;
   font-size: 1.6rem;
 }
 
-main .contact-container .conctac-item ul li {
+main .contact-container .conctact-item ul a {
+  text-decoration: none;
+  color: black;
+}
+
+main .contact-container .conctact-item ul li {
+  padding: 0 14px;
+  height: 40px;
   margin: 10px 0;
+  font-size: 1.6rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: lightgray;
+  border-radius: 10px;
 }
 
-main .contact-container .conctac-item ul li i {
-  font-size: 2rem;
+main .contact-container .conctact-item ul li i {
+  font-size: 3rem;
+  margin-right: 10px;
 }
 
-main .contact-container .conctac-item iframe {
-  width: 300px;
-  height: 300px;
+main .contact-container .conctact-item ul li:hover {
+  background-color: #9db4ff;
+  -webkit-transition: 500ms;
+  transition: 500ms;
 }
 
-main .contact-container .map2 {
+main .contact-container .conctact-item ul .addres-info {
+  height: 80px;
+}
+
+main .map2 {
   text-align: center;
+  margin-bottom: 20px;
+}
+
+main .map2 iframe {
+  width: 97%;
+  max-width: 800px;
+  height: 340px;
 }
 
 .map iframe {
   margin-top: 10px;
-  width: 320px;
+  width: 96%;
   height: 320px;
 }
 
