--- a/style_mobile.scss
+++ b/style_mobile.scss
@@ -32,7 +32,7 @@ header{
 
         .logo-header img{
             width: 345px;
-            margin-top: 25px;
+            margin-top: 18px;
         }
 
         .nav-rigth-section{
@@ -114,7 +114,7 @@ main{
             font-size: 1.8rem;
             line-height: 2rem;
             font-weight: 300;
-            text-align: center;
+            text-align: justify;
             padding: 20px ;
             color: $gray;
             margin: 0 auto;
@@ -357,7 +357,7 @@ main{
                     border-radius: 10px;
                     i{
                         font-size: 3rem;
-                        margin-right: 10px;
+                        margin-right: 12px;
                     }
                 
                 }
@@ -366,7 +366,7 @@ main{
                     transition: 500ms;
                 }
                 .addres-info{
-                    height: 80px;
+                    height: 85px;
                 }
                 
             }
@@ -401,57 +401,71 @@ main{
 
 
 footer{
+    .infoDev_container{
+        display: flex;
+        justify-content: center;
     
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: $blue;
-    padding-top: 10px;
+        width: 100%;
+        height: 25px;
+        background-color: $blue;
 
-    .rigth_footer{
-        margin: 15px 0;
-        color: white;
-        text-align: center;
-
-        h3{
-            font-size: 1.8rem;
-            font-weight: 300;
-        }
         p{
-            font-size: 1.2rem;
-            font-weight: 300;
-        }
-
-        img{
-            width: 80px;
-        }
-        
-    }
-    
-    .left_footer{
-        margin: 15px 0;
-
-        ul{
-            list-style: none;
             font-size: 1.4rem;
-            font-weight: 300;
-        }
-
-        li{
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
             color: $ligth-blue;
-            font-weight: 400;
+        }
+    }
+    .footer_container{
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        background-color: $blue;
+        padding-top: 10px;
 
-            i{
-                margin-right: 10px;
-                color: $ligth-blue;
+        .rigth_footer{
+            margin: 15px 0;
+            color: white;
+            text-align: center;
+
+            h3{
+                font-size: 1.8rem;
+                font-weight: 300;
+            }
+            p{
+                font-size: 1.2rem;
+                font-weight: 300;
+            }
+
+            img{
+                width: 80px;
             }
             
+        }
         
+        .left_footer{
+            margin: 15px 0;
+
+            ul{
+                list-style: none;
+                font-size: 1.4rem;
+                font-weight: 300;
+            }
+
+            li{
+                display: flex;
+                align-items: center;
+                margin-bottom: 10px;
+                color: $ligth-blue;
+                font-weight: 400;
+
+                i{
+                    margin-right: 10px;
+                    color: $ligth-blue;
+                }
+                
+            
+            }
         }
     }
 }
